--- a/style/styles.css
+++ b/style/styles.css
@@ -1,9 +1,372 @@
 /* This will effect everything from 0 to 576px */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+*{
+  box-sizing: border-box;
+}
+
+body {
+  font-family: open sans, sans-serif;
+  justify-content: center;
+
+}
+
+h1 {
+  font-family: 'Oswald';
+  color: #fff;
+}
+
+.top-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center; 
+  justify-content: space-between;
+  background-color: white;
+  color: #000;
+  height: 50px;
+  padding: 1em;
+}
+
+.menu > li {
+  margin: 0 1rem;
+  overflow: hidden;
+}
+
+.menu-button-container {
+  display: none;
+  height: 100%;
+  width: 30px;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#toggle {
+  display: none;
+}
 
 
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+  margin-top: 0px;
+  transform: rotate(405deg);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button {
+  background: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+  margin-top: 0px;
+  transform: rotate(-405deg);
+}
+
+.menu-button::before {
+  content: '';
+  margin-top: -8px;
+}
+
+.menu-button::after {
+  content: '';
+  margin-top: 8px;
+}
+
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+  display: block;
+  background-color: #fff;
+  position: absolute;
+  height: 4px;
+  width: 30px;
+  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  border-radius: 2px;
+}
+
+.container {
+  position: relative;
+  max-width: 800px; /* Maximum width */
+  margin: 0 auto; /* Center it */
+}
+
+.container .content {
+  position: absolute; /* Position the background text */
+  bottom: 0; /* At the bottom. Use top:0 to append it to the top */
+  background: rgb(0, 0, 0); /* Fallback color */
+  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+  color: #f1f1f1; /* Grey text */
+  width: 100%; /* Full width */
+  padding: 20px; /* Some padding */
+}
+
+#hero {
+  background-image: url(hero.jpg);
+  background-color: #000;
+  width: 25rem;
+
+}
+
+#hero p {
+  color: #fff;
+}
+.hero2 {
+  background-image: url(pizza_ad.jpg);
+  background-color: #000;
+}
+
+.col-2 {
+  display: flex;
+  justify-content: space-around;
+  color: #000;
+}
+
+.icons h1 {
+  color: #000;
+}
+
+.footer  {
+  background-color: #000;
+  width: 576px;
+  height: 25rem;
+  color: #606060;
+  justify-content: space-around;
+
+}
+
+.location {
+  display: flex;
+  justify-content: space-around;
+
+}
+
+footer h1 {
+  color: #606060;
+  font-family: 'Oswald', sans-serif;
+
+}
 
 /* Media Queries */
-@media (min-width: 576px) /* for mobile */{}
-@media (min-width:768px) /* for tablets */{}
-@media (min-width: 992px) /* for laptops */{}
-@media (min-width: 1200px) /* for large devices */{}
+@media (min-width: 576px) /* for mobile */{
+  .top-nav{
+    display:none;
+}
+
+.top-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center; 
+  justify-content: space-between;
+  background-color: white;
+  color: #000;
+  height: 50px;
+  padding: 1em;
+}
+
+#hero {
+  background:url(../images/hero.jpg) no-repeat;
+  background-size: cover;
+  height: 25rem;
+  width:45rem;
+}
+.col-2{
+  width:42rem;
+}
+.icon:nth-child(3){
+  display:none;
+}
+#hero2{
+   width:45rem;
+  background:url(../images/pizza_ad.jpg) no-repeat;
+  background-size: cover;
+  height: 35rem;
+  background-color: #000;
+}
+
+
+footer{
+border: 2px solid #000;
+height: 45rem;
+background-color:#000;
+width:45rem;
+}
+label{
+margin-left:7rem;
+}
+}
+@media (min-width:768px) /* for tablets */{
+
+  .menu > li {
+    margin: 0 1rem;
+    overflow: hidden;
+  }
+  
+  .menu-button-container {
+    display: none;
+    height: 100%;
+    width: 30px;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #toggle {
+    display: none;
+  }
+  
+  
+  #menu-toggle:checked + .menu-button-container .menu-button::before {
+    margin-top: 0px;
+    transform: rotate(405deg);
+  }
+  
+  #menu-toggle:checked + .menu-button-container .menu-button {
+    background: rgba(255, 255, 255, 0);
+  }
+  
+  #menu-toggle:checked + .menu-button-container .menu-button::after {
+    margin-top: 0px;
+    transform: rotate(-405deg);
+  }
+  
+  .menu-button::before {
+    content: '';
+    margin-top: -8px;
+  }
+  
+  .menu-button::after {
+    content: '';
+    margin-top: 8px;
+  }
+  
+  .menu-button,
+  .menu-button::before,
+  .menu-button::after {
+    display: block;
+    background-color: #fff;
+    position: absolute;
+    height: 4px;
+    width: 30px;
+    transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    border-radius: 2px;
+  }
+  
+  .container {
+    position: relative;
+    max-width: 800px; 
+    margin: 0 auto; 
+  }
+  
+  .container .content {
+    position: absolute; 
+    bottom: 0; 
+    background: rgb(0, 0, 0); 
+    background: rgba(0, 0, 0, 0.5); 
+    color: #f1f1f1; 
+    width: 100%; 
+    padding: 20px; 
+  }
+  
+  #hero {
+    background-image: url(hero.jpg);
+    background-color: #000;
+    width: 25rem;
+  
+  }
+  
+  #hero p {
+    color: #fff;
+  }
+  .hero2 {
+    background-image: url(pizza_ad.jpg);
+    background-color: #000;
+  }
+  
+  
+  
+  .col-2 {
+    display: flex;
+    justify-content: space-around;
+    color: #000;
+  }
+  
+  .icons h1 {
+    color: #000;
+  }
+  
+  
+  
+  .footer  {
+    background-color: #000;
+    width: 576px;
+    height: 25rem;
+    color: #606060;
+    justify-content: space-around;
+  
+  }
+  
+  .location {
+    display: flex;
+    justify-content: space-around;
+  
+  }
+  
+  footer h1 {
+    color: #606060;
+    font-family: 'Oswald', sans-serif;
+  
+  }
+
+}
+@media (min-width: 992px) /* for laptops */{
+    .top-nav {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        background-color: white;
+        color: #000;
+        height: 50px;
+        padding: 1em;
+    }
+    .menu {
+      display: flex;
+      flex-direction: row;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    #hero {
+      background-image: url(hero.jpg);
+      background-color: #000;
+      width: 992px;
+    
+    }
+
+    #hero p {
+      color: #fff;
+    }
+
+
+}
+@media (min-width: 1200px) /* for large devices */{
+    .top-nav {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        background-color: white;
+        color: #000;
+        height: 50px;
+        padding: 1em;
+    }
+
+    .menu {
+      display: flex;
+      flex-direction: row;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+}
